--- a/app/assets/stylesheets/pages/organizer.sass
+++ b/app/assets/stylesheets/pages/organizer.sass
@@ -16,6 +16,10 @@ $green-color: #19D4D6
       .list-body
         padding-top: 40px
 
+
+.list-inline > li
+  font-size: 14px
+
 #organizer-events-new, #organizer-events-edit
   .section
     padding-top: 30px
