--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -14,8 +14,8 @@
     <meta property="og:site_name" content="daydash.co"/>
     <meta property="og:type" content="event"/>
     <meta property="og:description" content="<%= truncate(@event.try(:short_description), :length => 300) || @seo_description %>"/>
-    <meta property="og:image" content="<%= @event.try(:event_pictures).try(:first).try(:media, :thumb) || @seo_image %>" />
-    <meta property="og:image:url" content="<%= @event.try(:event_pictures).try(:first).try(:media, :thumb) || @seo_image %>">
+    <meta property="og:image" content="<%= @event.try(:cover, :facebook) || @seo_image %>" />
+    <meta property="og:image:url" content="<%= @event.try(:cover, :facebook) || @seo_image %>">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:latitude" content="<%= @event.try(:latitude) %>"/>
@@ -30,7 +30,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@daydashapp" />
     <meta name="twitter:title" content="Daydash - <%= @event.try(:title) || @seo_title %>" />
-    <meta name="twitter:image" content="<%= @event.try(:event_pictures).try(:first).try(:media, :thumb) || @seo_image %>" />
+    <meta name="twitter:image" content="<%= @event.try(:cover, :facebook) || @seo_image %>" />
 
     <meta name= "category-id" content="<%= @category_id %>">
 
