--- a/app/views/client/profile/wishlist.html.erb
+++ b/app/views/client/profile/wishlist.html.erb
@@ -18,7 +18,7 @@
                 <div class="event card">
                   <%= link_to client_event_path(event.to_url), target: '_self' do %>
                     <% if event.event_pictures.present? %>
-                      <div class="cover" style="background-image: url(<%= event.event_pictures.first.try(:media, :thumb) %>);"></div>
+                      <div class="cover" style="background-image: url(<%= event.try(:cover, :thumb) %>);"></div>
                     <% else %>
                       <div class="cover"></div>
                     <% end %>
