--- a/app/views/layouts/parts/_section.html.erb
+++ b/app/views/layouts/parts/_section.html.erb
@@ -30,6 +30,10 @@
 
     return false;
   }
+
+  $(document).ready(function(){
+    initDatetimepicker($('body'));
+  });
 </script>
 
 <!-- Template -->
