--- a/app/views/client/events/express.html.erb
+++ b/app/views/client/events/express.html.erb
@@ -9,7 +9,7 @@
           <div class="card-header row">
             <div class="col col-xs-4 col-md-12">
               <%= link_to client_event_path(@event.to_url), target: '_self' do %>
-                <div class="cover" style="background-image: url(<%= @event.try(:cover, :full) %>);"></div>
+                <div class="cover" style="background-image: url(<%= @event.get_thumbnail %>);"></div>
               <% end %>
             </div>
             <div class="col col-xs-8 col-md-12">
