Bug fixes tubolinks
- What I did
I've tubolinks on load

- How I did it
I've changed on ready to tubolinks on load

- Description for the changelog
…….

--- a/app/views/client/profile/orders.html.erb
+++ b/app/views/client/profile/orders.html.erb
@@ -105,7 +105,7 @@
               <div class="empty">
                 <i class="icon icon-lg icon-shopping"></i>
                 <h4 class="description">ยังไม่มีรายการสั่งซื้อ</h4>
-                <a class="btn btn-daydash btn-daydash-md btn-daydash-green-1" href="/" target="_self">ค้นหากิจกรรมและอีเว้นท์ที่น่าสนใจ</a>
+                <a class="btn btn-daydash btn-daydash-md btn-daydash-green-1" href="/">ค้นหากิจกรรมและอีเว้นท์ที่น่าสนใจ</a>
               </div>
             <% end %>
           </div>
