--- a/app/views/layouts/parts/_nav.html.erb
+++ b/app/views/layouts/parts/_nav.html.erb
@@ -64,17 +64,17 @@
         <div id="navigation">
           <ul class="navigation-menu">
             <li class="has-submenu">
-              <%= link_to admin_path, target: '_self' do %>
+              <%= link_to admin_path do %>
               <i class="md md-dashboard"></i>Dashboard
               <% end %>
             </li>
             <li class="has-submenu">
-              <%= link_to admin_events_path, target: '_self' do %>
+              <%= link_to admin_events_path do %>
               <i class="md md-event"></i>Event
               <% end %>
             </li>
             <li class="has-submenu">
-              <%= link_to admin_users_path, target: '_self' do %>
+              <%= link_to admin_users_path do %>
               <i class="md md-person"></i>User
               <% end %>
             </li>
