--- a/app/views/organizer/parts/_organizer-nav.html.erb
+++ b/app/views/organizer/parts/_organizer-nav.html.erb
@@ -10,7 +10,7 @@
         <%= link_to "Manage Event", organizer_events_path %>
       </li>
       <li id="menu-create-event">
-        <%= link_to "Create New Event", new_organizer_event_path, target: '_self'%>
+        <%= link_to "Create New Event", new_organizer_event_path%>
       </li>
     </nav>
   </div>
