--- a/app/views/client/profile/wishlist.html.erb
+++ b/app/views/client/profile/wishlist.html.erb
@@ -16,7 +16,7 @@
             <% @events.each do |event| %>
               <div class="col-sm-6 col-md-4">
                 <div class="event card">
-                  <%= link_to client_event_path(event.to_url), target: '_self' do %>
+                  <%= link_to client_event_path(event.to_url) do %>
                     <div class="cover" style="background-image: url(<%= event.get_thumbnail %>);"></div>
                   <% end %>
                   <div class="info">
