bug fixes organizer map
- What I did
I've organizer map

- How I did it
I've changed default map when edit

- Description for the changelog
…….

--- a/app/views/organizer/parts/_event_form.html.erb
+++ b/app/views/organizer/parts/_event_form.html.erb
@@ -80,7 +80,7 @@
                     <input class="form-control" type="text" name="longitude" id="event_longitude" value="<%= @event.longitude %>" placeholder="Longitude" />
                   </div>
                   <input id="pac-input" class="controls" type="text" placeholder="Search Box">
-                  <div id="map" style="margin-top: 15px; height: 300px;"></div>
+                  <div id="organizer-map" style="margin-top: 15px; height: 300px;"></div>
                 </div>
               </div>
               <div class="col-xs-12 col-md-6">
