--- a/app/views/organizer/parts/_event_form.html.erb
+++ b/app/views/organizer/parts/_event_form.html.erb
@@ -15,7 +15,7 @@
               <div class="col-xs-12 col-md-6">
                 <div class="form-group">
                   <label>Event Title</label>
-                  <input class="form-control" name="title" value="<%= @event.title %>" />
+                  <input class="form-control" name="title" value="<%= @event.title %>" data-parsley-required="true" />
                 </div>
                 <div class="form-group">
                   <label>Event Slug</label>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="form-group">
                   <label>Location</label>
-                  <input class="form-control" name="location_name" value="<%= @event.location_name %>" placeholder="eg. Hubba Thailand" />
+                  <input class="form-control" name="location_name" value="<%= @event.location_name %>" placeholder="eg. Hubba Thailand" data-parsley-required="true" />
                 </div>
                 <div class="form-group">
                   <label>Address</label>
@@ -86,7 +86,7 @@
               <div class="col-xs-12 col-md-6">
                 <div class="form-group">
                   <label>Cover</label>
-                  <input class="form-control" type="file" name="cover" />
+                  <input class="form-control" type="file" name="cover" data-parsley-required="true" />
                 </div>
                 <div class="image-list row">
                   <div class="col-xs-12">
@@ -95,7 +95,7 @@
                 </div>
                 <div class="form-group">
                   <label>Images</label>
-                  <input class="form-control" type="file" name="event_pictures[]" multiple />
+                  <input class="form-control" type="file" name="event_pictures[]" multiple data-parsley-required="true" />
                 </div>
                 <div class="image-list sortable row">
                   <% @images.each do |image| %>
