--- a/app/views/organizer/parts/_organizer-event-nav.html.erb
+++ b/app/views/organizer/parts/_organizer-event-nav.html.erb
@@ -6,16 +6,19 @@
     <a href="<%= checkin_organizer_event_path(@event) %>"><i class="icon icon-xs icon-checkin"></i> Check in</a>
   </li>
   <li>
-    <a href="<%= edit_organizer_event_path(@event) %>" target="_self"><i class="icon icon-xs icon-edit"></i> Edit</a>
+    <a href="<%= edit_organizer_event_path(@event) %>"><i class="icon icon-xs icon-edit"></i> Edit</a>
   </li>
-  <li>
-    <% if @event.status.published? %>
-      <a href="<%= unpublish_organizer_event_path(@event) %>" target="_self"><i class="icon icon-xs icon-unpublish"></i> Unpublish</a>
-    <% else %>
-      <a href="<%= published_organizer_event_path(@event) %>" target="_self"><i class="icon icon-xs icon-checked"></i> Published</a>
-    <% end %>
-  </li>
-  <li>
-    <a href="<%= update_time_event_organizer_event_path(@event) %>" target="_self"><i class="fa fa-wrench" aria-hidden="true"></i> Force update events</a>
-  </li>
+
+  <% if current_user.admin? %>
+    <li>
+      <% if @event.status.published? %>
+        <a href="<%= unpublish_organizer_event_path(@event) %>"><i class="icon icon-xs icon-unpublish"></i> Unpublish</a>
+      <% else %>
+        <a href="<%= published_organizer_event_path(@event) %>"><i class="icon icon-xs icon-checked"></i> Published</a>
+      <% end %>
+    </li>
+    <li>
+      <a href="<%= update_time_event_organizer_event_path(@event) %>"><i class="fa fa-wrench" aria-hidden="true"></i> Force update events</a>
+    </li>
+  <% end %>
 </ul>
