--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -180,7 +180,17 @@
                 </ul>
               </div>
 
-              <div class="fb-page" data-href="https://www.facebook.com/daydashapp/" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/daydashapp/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/daydashapp/">Daydash</a></blockquote></div>
+
+              <div  class="fb-page"
+                    data-href="https://www.facebook.com/daydashapp/"
+                    data-small-header="true"
+                    data-adapt-container-width="true"
+                    data-hide-cover="false"
+                    data-show-facepile="true">
+                  <blockquote cite="https://www.facebook.com/daydashapp/" class="fb-xfbml-parse-ignore">
+                    <a href="https://www.facebook.com/daydashapp/">Daydash</a>
+                  </blockquote>
+              </div>
             </div>
             <div class="col col-xs-12 col-md-3">
               <!-- <div class="list-panel">
