bug fixes production error
- What I did
I've …

- How I did it
I've changed …

- Description for the changelog
…….

--- a/app/views/client/events/index.html.erb
+++ b/app/views/client/events/index.html.erb
@@ -32,7 +32,7 @@
     <div class="row event-list">
       <% @events.each do |event| %>
         <div class="col-sm-6 col-md-4 event-wrapper <% event.categories.each do |category| %> event-category-<%= category.id %><% end %>">
-          <%= link_to client_event_path(event.to_url), class: "event card" do %>
+          <%= link_to client_event_path(event.to_url), class: "event card", "data-turbolinks" => false do %>
             <div class="cover" style="background-image: url(<%= event.get_thumbnail %>);"></div>
             <div class="info">
               <h4 class="title text-left"><%= event.title %></h4>
