--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -180,6 +180,11 @@
                 </ul>
               </div>
 
+              <div class="fb-page"
+                data-href="https://www.facebook.com/imdb"
+                data-width="340"
+                data-hide-cover="false"
+                data-show-facepile="true"></div>
 
               <div  class="fb-page"
                     data-href="https://www.facebook.com/daydashapp/"
@@ -187,9 +192,6 @@
                     data-adapt-container-width="true"
                     data-hide-cover="false"
                     data-show-facepile="true">
-                  <blockquote cite="https://www.facebook.com/daydashapp/" class="fb-xfbml-parse-ignore">
-                    <a href="https://www.facebook.com/daydashapp/">Daydash</a>
-                  </blockquote>
               </div>
             </div>
             <div class="col col-xs-12 col-md-3">
