--- a/app/assets/stylesheets/pages/events.sass
+++ b/app/assets/stylesheets/pages/events.sass
@@ -133,18 +133,18 @@ html, body
 
 #main
   min-height: 800px
-  padding-bottom: 550px
+  padding-bottom: 450px
 
 @media all and (max-width: 991px)
   #main
-    padding-bottom: 785px
+    padding-bottom: 760px
 
 #footer
   position: absolute
   bottom: 0px
   left: 0px
   right: 0px
-  height: auto
+  height: 450px
   background-color: $gray-color-3
   color: $gray-color-a
   padding-bottom: 100px
@@ -181,7 +181,8 @@ html, body
     margin-top: 50px
 
   @media (max-width: 991px)
-
+    height: 900px
+    padding-bottom: 50px
     .col
       margin-top: 40px
 
@@ -211,7 +212,8 @@ html, body
 
 @media (max-width: 991px)
   #main
-    padding-bottom: 1200px
+    padding-bottom: 900px
+
 
 a
   color: #00CFD1
