--- a/app/assets/stylesheets/pages/events.sass
+++ b/app/assets/stylesheets/pages/events.sass
@@ -247,7 +247,9 @@ label
   padding: 3px 15px
   background: linear-gradient(90deg, #433B8F, #2F9687)
   color: white
-
+.nav-badge
+  margin: 20px 5px 0px
+  font-size: 12px
 
 .mobile-only
   @media (min-width: 992px)
