--- a/app/views/organizer/parts/_event_form.html.erb
+++ b/app/views/organizer/parts/_event_form.html.erb
@@ -196,4 +196,4 @@
           </div>
 
     <!-- Template -->
-    <%= render partial: "layouts/parts/section" %>
+    <%= render partial: "organizer/parts/section" %>
