--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -39,9 +39,11 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <% if current_user.present? %>
-              <ul class="nav navbar-nav navbar-right mobile-hide">
+                <ul class="nav navbar-nav navbar-right mobile-hide">
                   <% if current_user.can_organizer? %>
-                  <li><%= link_to "Organizer", "/organizer" %></li>
+                    <li>
+                      <div class="role-badge organizer-badge nav-badge">ORGANIZER</div>
+                    </li>
                   <% end %>
                   <li class="dropdown user-dropdown">
                     <a href="/" class="dropdown-toggle" data-toggle="dropdown" role="button">
@@ -50,17 +52,21 @@
                       <i class="fa fa-caret-down"></i>
                     </a>
                     <ul class="dropdown-menu">
-                      <li><%= link_to "My Tickets", client_profile_tickets_path(current_user) %></li>
-                      <li><%= link_to "My Orders", client_profile_orders_path(current_user) %></li>
-                      <!-- <li><a href="/profile/wishlist">Wish List</a></li> -->
+                      <% if current_user.can_organizer? %>
+                        <li><%= link_to "Manage Event", organizer_events_path %></li>
+                        <li><%= link_to "Create New Event", new_organizer_event_path %></li>
+                      <% else %>
+                        <li><%= link_to "My Tickets", client_profile_tickets_path(current_user) %></li>
+                        <li><%= link_to "My Orders", client_profile_orders_path(current_user) %></li>
+                      <% end %>
                       <li><%= link_to "My Account", client_profile_settings_path(current_user) %></li>
                       <li>
-                      <%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
+                        <%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
                       </li>
                     </ul>
                   </li>
                 </ul>
-                <% else %>
+              <% else %>
                 <ul class="nav navbar-nav navbar-right">
                   <li><a id="menu-login" class="btn btn-daydash btn-daydash-green-2" data-toggle="modal" data-target="#login-modal" href="#login-modal">สมัครสมาชิกฟรี / เข้าสู่ระบบ</a></li>
                 </ul>
@@ -84,20 +90,21 @@
             </div>
 
             <% if current_user.present? %>
-            <div id="profile-navbar" class="navbar-collapsse collapse">
-              <ul class="nav navbar-nav mobile-only">
-                <% if current_user.can_organizer? %>
-                <li><%= link_to "Organizer", "/organizer" %></li>
-                <% end %>
-                <li><%= link_to "My Tickets", client_profile_tickets_path(current_user) %></li>
-                <li><%= link_to "My Orders", client_profile_orders_path(current_user) %></li>
-                <!-- <li><a href="/profile/wishlist">Wish List</a></li> -->
-                <li><%= link_to "My Account", client_profile_settings_path(current_user) %></li>
-                <li>
-                <%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
-                </li>
-              </ul>
-            </div>
+              <div id="profile-navbar" class="navbar-collapsse collapse">
+                <ul class="nav navbar-nav mobile-only">
+                  <% if current_user.can_organizer? %>
+                    <li><%= link_to "Manage Event", organizer_events_path %></li>
+                    <li><%= link_to "Create New Event", new_organizer_event_path %></li>
+                  <% else %>
+                    <li><%= link_to "My Tickets", client_profile_tickets_path(current_user) %></li>
+                    <li><%= link_to "My Orders", client_profile_orders_path(current_user) %></li>
+                  <% end %>
+                  <li><%= link_to "My Account", client_profile_settings_path(current_user) %></li>
+                  <li>
+                  <%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
+                  </li>
+                </ul>
+              </div>
             <% end %>
           </div>
         </nav>
