--- a/app/assets/stylesheets/pages/events.sass
+++ b/app/assets/stylesheets/pages/events.sass
@@ -862,6 +862,11 @@ label
       letter-spacing: 0.2px
       margin-bottom: 50px
       line-height: 1.7em
+      white-space: pre-wrap
+      white-space: -moz-pre-wrap
+      white-space: -pre-wrap
+      white-space: -o-pre-wrap
+      word-wrap: break-word
     .gallery
       margin-left: -5px
       margin-right: -5px
