order checkin checkout
- What I did
I've …

- How I did it
I've changed …

- Description for the changelog
…….

--- a/app/views/organizer/events/edit.html.erb
+++ b/app/views/organizer/events/edit.html.erb
@@ -1,6 +1,7 @@
 <script type="text/javascript">
   $('body').attr('id', 'organizer-events-edit').addClass('organizer-event-page');
   $('#organizer-nav #menu-event-list').addClass('active');
+  $('.organizer-event-nav .organizer-event-nav-edit').addClass('active');
 </script>
 
 <%= render partial: "organizer/parts/organizer-nav" %>
