Event Detail - Modal - Select Ticket - adjust layout

--- a/app/assets/stylesheets/components/icon.sass
+++ b/app/assets/stylesheets/components/icon.sass
@@ -70,3 +70,5 @@
   background-image: asset-url('icons/icon-shopping.png')
 .icon-lock
   background-image: asset-url('icons/icon-lock.png')
+.icon-close
+  background-image: asset-url('icons/icon-close.png')
