--- a/app/assets/stylesheets/pages/events.sass
+++ b/app/assets/stylesheets/pages/events.sass
@@ -911,7 +911,7 @@ label
         left: 0px
         right: 0px
         height: auto
-        z-index: 9999
+        z-index: 999
         margin-bottom: 0px
         font-size: 20px
 
@@ -921,22 +921,59 @@ label
 
   #ticket-list-modal
     margin-top: 100px
-    .table
-      margin-bottom: 0px
-      td
-        padding-left: 15px
-        padding-right: 15px
-    .ticket .ticket-title
-      font-weight: bold
+
+    .modal-content
+      font-size: 20px
+      font-weight: 200
+      border-radius: 0px
+
+    .modal-header
+      .close
+        opacity: 1
+        padding-top: 5px
+
+    .modal-title
+      font-size: 20px
+      font-weight: 200
+
+    .modal-body
+      background-color: #fcfcfc
+
+      .ticket-type
+        margin-bottom: 15px
+        padding: 15px
+        border: 1px solid #eee
+        background-color: white
+
+        &:hover, &.active
+          padding: 14px
+          border: 2px solid #B0E0E0
+
+        .header
+          font-weight: 200
+
+        .datetime
+          font-size: 16px
+          font-weight: 200
+          color: #777
+
+        select
+          width: 80px
+          float: right
+
+    .modal-footer
+      .btn-daydash
+        margin-left: 15px
+        font-size: 20px
+        font-weight: 200
+        padding: 10px 20px
 
     @media (max-width: 991px)
-      .table-responsive
-        margin-bottom: 0px
-
-      select.form-control
-        min-width: 60px
-
-
+      .modal-footer
+        .btn-daydash
+          margin-top: 15px
+          margin-left: 0px
+          width: 100%
 
 #payment-page
   #payment-section
