--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -55,7 +55,8 @@
               <!-- <a class="btn btn-block btn-daydash">Add to my Wishlist</a> -->
               <div class="social-list">
                 <div class="fb-share-button" data-href="<%= client_event_path(@event.to_url) %>" data-layout="button_count" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=<%= client_event_path(@event.to_url) %>">Share</a></div>
-                <a href="<%= client_event_path(@event.to_url) %>" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+                <a href="<%= client_event_path(@event.to_url) %>?text=Let's go! <%= @event.title %> @daydashapp" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
               </div>
             </div>
           </div>
