--- a/app/views/client/profile/settings.html.erb
+++ b/app/views/client/profile/settings.html.erb
@@ -9,6 +9,7 @@
     <div class="row">
       <div class="col-xs-12">
         <%= form_for(@user, as: @user, url: client_profile_settings_path(@user), html: { method: :put }) do |f| %>
+          <%= f.hidden_field :role, value: @user.role %>
           <div class="form-header">
             <h1 class="form-title">Account Settings</h1>
           </div>
@@ -70,6 +71,40 @@
               <label>Phone Number</label>
               <%= f.telephone_field :phone, value: @user.phone, class: 'form-control' %>
             </div>
+
+            <% if @user.can_organizer? %>
+              <div class="form-group col-xs-12 col-md-6">
+                <label>Business Name</label>
+                <%= f.text_field :company, value: @user.company, class: 'form-control' %>
+              </div>
+              <div class="form-group col-xs-12 col-md-6">
+                <label>Website URL</label>
+                <%= f.text_field :url, value: @user.url, class: 'form-control' %>
+              </div>
+              <div class="form-group col-xs-12 col-md-6">
+                <label>Short Description</label>
+                <%= f.text_area :short_description, size: '50x10', class: 'form-control' do %>
+                  <%= @user.short_description %>
+                <% end %>
+              </div>
+            <% end %>
+            <div class="form-group col-xs-12 col-md-6">
+              <label>Picture</label>
+              <%= f.file_field :picture, value: @user.try(:picture, :medium), class: 'form-control' %>
+            </div>
+
+            <% if @user.can_organizer? %>
+              <div class="form-group col-xs-12 col-md-12">
+                <label>Location on Map</label>
+                <div class="form-inline">
+                  <input class="form-control" type="text" name="latitude" id="event_latitude" value="" placeholder="Latitude" />
+                  <input class="form-control" type="text" name="longitude" id="event_longitude" value="" placeholder="Longitude" />
+                </div>
+                <input id="pac-input" class="controls" type="text" placeholder="Search Box">
+                <div id="organizer-map" style="margin-top: 15px; height: 300px;"></div>
+              </div>
+            <% end %>
+
             <div class="col-xs-12">
               <button class="btn btn-daydash btn-daydash-green-1">Update</button>
             </div>
